--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "An free and opensource akinator app",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build"
   },
   "author": "Wolfcrafter321",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^6.2.4",
+    "svelte": "^5.49.0",
+    "vite": "^7.3.1"
+  }
 }
